# spacy-demo

./: Makefile  README.md  pyproject.toml
data/: 1.txt
entity_id/: __init__.py  english.py
tests/: api_test.py  test_entity_id.py
